# mkdocs-gitlab

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue.yaml
.github/workflows/: check.yml  pypi.yml
mkdocs_gitlab/: markdown.py  plugin.py
tests/: test_markdown.py  test_plugin.py
