[tool.commitizen]
name = "cz_conventional_commits"
version = "1.3.0"
tag_format = "$version"
version_files = [
    "mkdocs_gitlab/__init__.py",
    "pyproject.toml:version"
]
bump_message = "chore(release): version $current_version → $new_version"
update_changelog_on_bump = true

[tool.poetry]
name = "mkdocs-gitlab"
version = "1.3.0"
description = "Use Gitlab CI variables for your docs"
authors = ["Danil Akhtarov <daxartio@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/daxartio/mkdocs-gitlab"
homepage = "https://pypi.org/project/mkdocs-gitlab"
keywords = []

[tool.poetry.plugins."mkdocs.plugins"]
"mkdocs-gitlab" = "mkdocs_gitlab.plugin:MkDocsGitlabPlugin"
"gitlab" = "mkdocs_gitlab.plugin:MkDocsGitlabPlugin"

[tool.poetry.plugins."markdown.extensions"]
"mkdocs-gitlab" = "mkdocs_gitlab.markdown:TOCExtension"
"gitlab" = "mkdocs_gitlab.markdown:TOCExtension"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "*"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"
pytest = "^7.2.2"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"
pytest-deadfixtures = "^2.2.1"
pytest-mock = "^3.10.0"
ruff = "^0.0.255"
toml = "^0.10.2"
types-markdown = "^3.4.2.10"

[tool.poetry.group.git.dependencies]
commitizen = "^3.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.coverage.run]
omit = ["tests/*", "**/__main__.py", "**/.venv/*", "**/site-packages/*"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100

[tool.pytest.ini_options]
asyncio_mode = "strict"
addopts = "--strict-markers --showlocals --verbosity 2"
log_level = "DEBUG"

[tool.ruff]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "YTT",
    "S",
    "BLE",
    "B",
    "A",
    "C40",
    "DTZ",
    "T10",
    "EM",
    "ISC",
    "ICN",
    "PIE",
    "T20",
    "PT",
    "Q",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "ERA",
    "PD",
    "RUF",
]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D213",
    "EM101",
]
exclude = []

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
